<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="app_name">CastRemoteDisplay</string>
    <string name="app_description">Click Play, Start Remote</string>
    <string name="app_id">AAECE0D8</string>
    <string name="presentation_with_media_router_activity_text">Remote Active</string>
    <string name="presentation_with_media_router_play_on">Play on...</string>
    <string name="presentation_with_media_router_now_playing_locally">Now playing on main display \'%s\'.</string>
    <string name="presentation_with_media_router_now_playing_remotely">Now playing on secondary display \'%s\'.</string>
    <string name="init_error">Error starting the remote display</string>
    <string name="play">PLAY</string>
    <string name="home">Home</string>
    <string name="back">Back</string>

    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="click">Click</string>

    <string name="message_bus_namespace">urn:x-cast:com.google.cast.sample.helloworld</string>
    <string name="message_bus_initial_state">select-entertainment</string>
</resources>
