<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- See corresponding Java code CastRemoteDisplayMainActivity.java. -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:paddingTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@drawable/ab_transparent_transparent"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!-- Message to show to user. -->
    <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/presentation_with_media_router_activity_text"/>

    <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/home"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="4"
        android:rowCount="4">

        <Button
            android:id="@+id/up_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:layout_row="0"
            android:layout_column="1" />
        <Button
            android:id="@+id/down_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/down"
            android:layout_row="2"
            android:layout_column="1" />
        <Button
            android:id="@+id/left_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:layout_row="1"
            android:layout_column="0" />
        <Button
            android:id="@+id/right_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:layout_row="1"
            android:layout_column="2" />
        <Button
            android:id="@+id/click_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:layout_row="1"
            android:layout_column="1" />
    </GridLayout>

</LinearLayout>
